# math-distill-stage2-proofbench

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
data/residual-100-v1/: manifest.json  problems.jsonl
data/residual-1000-v1/: manifest.json  problems.jsonl  shape_buckets.json
data/residual-1000-v2/: manifest.json  problems.jsonl  shape_buckets.json
data/residual-1000-v3/: manifest.json  problems.jsonl  shape_buckets.json
src/proofbench_tools/: __init__.py  common.py  plot_residual1000_versions.py  summarize_results.py  verify_remote_simple_api.py
