[project]
name = "math-distill-stage2-proofbench"
version = "0.1.0"
description = "Unofficial residual Lean certificate benchmark for Math Distill Stage 2 solver experiments"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proofbench_tools"]

[project.scripts]
proofbench-remote-judge = "proofbench_tools.verify_remote_simple_api:main"
proofbench-summarize-results = "proofbench_tools.summarize_results:main"
